[package]
name = "lorawan"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lucasgranberg/lorawan"
categories = ["embedded", "no-std", "asynchronous"]
keywords = ["lorawan", "lora", "radio", "iot", "semtech"]
description = "Provides end device support for LoRaWAN revision 1.0.4."

[lib]
test = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.8.0"
as-slice = "0.2"
futures = { version = "0.3.28", default-features = false }
defmt = { version = "0.3", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true}
lora-modulation = {version="0.1.4"}
encoding={package="lorawan",version ="0.8.0", default-features = false, features = [
    "default-crypto",
] }
lora-phy={version="3.0", default-features = false}

[features]
default = ["defmt","serde"]
defmt = ["dep:defmt","lora-modulation/defmt","encoding/defmt","heapless/defmt-03"]
serde = ["dep:serde"]